WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256300
LocalFrameView::performPostLayoutTasks should not synchronously scroll to or focus an element
https://bugs.webkit.org/show_bug.cgi?id=256300
Summary
LocalFrameView::performPostLayoutTasks should not synchronously scroll to or ...
Ryosuke Niwa
Reported
2023-05-04 01:08:14 PDT
Don't synchronously scroll to or focus an element in LocalFrameView::didUpdate.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-05-04 01:17:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13439
EWS
Comment 2
2023-05-04 16:39:08 PDT
Committed
263699@main
(99b736b10803): <
https://commits.webkit.org/263699@main
> Reviewed commits have been landed. Closing PR #13439 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-04 16:40:20 PDT
<
rdar://problem/108920933
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug