LocalFrameView::performPostLayoutTasks should not synchronously scroll to or focus an element https://bugs.webkit.org/show_bug.cgi?id=256300

Reviewed by Alan Baradlay.

Schedule a task to scroll to a fragment or text fragment in LocalFrameView::performPostLayoutTasks
instead of synchronously triggering a scroll.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::maintainScrollPositionAtAnchor):
(WebCore::LocalFrameView::scheduleScrollToAnchorAndTextFragment): Added.
(WebCore::LocalFrameView::scrollToAnchorAndTextFragmentNowIfNeeded): Added.
* Source/WebCore/page/LocalFrameView.h:

Canonical link: https://commits.webkit.org/263699@main